# InfiniTAM

./: CMakeLists.txt  ITAMConstants.h  infinitam_library.cpp
ITMLib/: ITMLibDefines.h
ITMLib/Trackers/: ITMTrackerFactory.h
